--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,9 @@
 FROM openjdk:25-ea
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+
+WORKDIR /app
+COPY . .
+RUN ./mvnw clean package -DskipTests
+
+RUN cp target/*.jar app.jar
+
+ENTRYPOINT ["java","-jar","app.jar"]
